--- a/back/alarm/Makefile
+++ b/back/alarm/Makefile
@@ -1,8 +1,9 @@
-#
-# This is a project Makefile. It is assumed the directory this Makefile resides in is a
-# project subdirectory.
-#
+PROJECT_NAME := Timely
 
-PROJECT_NAME := alarm
+EXTRA_COMPONENT_DIRS = ./components
 
 include $(IDF_PATH)/make/project.mk
+
+WEB_SRC_DIR = $(shell pwd)/../../front/alarm/
+SPIFFS_IMAGE_FLASH_IN_PROJECT := 1
+$(eval $(call spiffs_create_partition_image,spiffs,$(WEB_SRC_DIR)/dist))
