--- a/front/alarm/package.json
+++ b/front/alarm/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "recorder-js": "^1.0.7",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
